@@ -53,7 +53,7 @@ if [[ -z "${HADOOP_LIBEXEC_DIR}" ]]; then
 fi
 
 # get our functions defined for usage later
-if [[ -n "${HADOOP_COMMON_HOME}" ]] && 
+if [[ -n "${HADOOP_COMMON_HOME}" ]] &&
    [[ -e "${HADOOP_COMMON_HOME}/libexec/hadoop-functions.sh" ]]; then
   . "${HADOOP_COMMON_HOME}/libexec/hadoop-functions.sh"
 elif [[ -e "${HADOOP_LIBEXEC_DIR}/hadoop-functions.sh" ]]; then
@@ -93,75 +93,8 @@ hadoop_bootstrap
 # shellcheck disable=SC2034
 HADOOP_USER_PARAMS=("$@")
 
-HADOOP_DAEMON_MODE="default"
-
-while [[ -z "${_hadoop_common_done}" ]]; do
-  case $1 in
-    --buildpaths)
-      # shellcheck disable=SC2034
-      HADOOP_ENABLE_BUILD_PATHS=true
-      shift
-    ;;
-    --config)
-      shift
-      confdir=$1
-      shift
-      if [[ -d "${confdir}" ]]; then
-        # shellcheck disable=SC2034
-        HADOOP_CONF_DIR="${confdir}"
-      elif [[ -z "${confdir}" ]]; then
-        hadoop_error "ERROR: No parameter provided for --config "
-        hadoop_exit_with_usage 1
-      else
-        hadoop_error "ERROR: Cannot find configuration directory \"${confdir}\""
-        hadoop_exit_with_usage 1
-      fi
-    ;;
-    --daemon)
-      shift
-      HADOOP_DAEMON_MODE=$1
-      shift
-      if [[ -z "${HADOOP_DAEMON_MODE}" || \
-        ! "${HADOOP_DAEMON_MODE}" =~ ^st(art|op|atus)$ ]]; then
-        hadoop_error "ERROR: --daemon must be followed by either \"start\", \"stop\", or \"status\"."
-        hadoop_exit_with_usage 1
-      fi
-    ;;
-    --debug)
-      shift
-      # shellcheck disable=SC2034
-      HADOOP_SHELL_SCRIPT_DEBUG=true
-    ;; 
-    --help|-help|-h|help|--h|--\?|-\?|\?)
-      hadoop_exit_with_usage 0
-    ;;
-    --hostnames)
-      shift
-      # shellcheck disable=SC2034
-      HADOOP_SLAVE_NAMES="$1"
-      shift
-    ;;
-    --hosts)
-      shift
-      hadoop_populate_slaves_file "$1"
-      shift
-    ;;
-    --loglevel)
-      shift
-      # shellcheck disable=SC2034
-      HADOOP_LOGLEVEL="$1"
-      shift
-    ;;
-    --slaves)
-      shift
-      # shellcheck disable=SC2034
-      HADOOP_SLAVE_MODE=true
-    ;;
-    *)
-      _hadoop_common_done=true
-    ;;
-  esac
-done
+hadoop_parse_args "$@"
+shift "${HADOOP_PARSE_COUNTER}"
 
 #
 # Setup the base-line environment
