@@ -234,6 +234,8 @@ Trunk (Unreleased)
 
     HADOOP-10979. Auto-entries in hadoop_usage (aw)
 
+    HADOOP-12249. pull argument parsing into a function (aw)
+
   BUG FIXES
 
     HADOOP-11473. test-patch says "-1 overall" even when all checks are +1
